# Notification-System-with-Microservices-architecture

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  rabbit.py
push_service/app/: consumer.py  push_sender.py
scripts/: init-databases.sh  init-db.sql
services/api-gateway/: .env.example  README.md  pyproject.toml  requirements.txt
services/api-gateway/app/: config.py  database.py  main.py
services/api-gateway/app/models/: __init__.py  db_models.py  notification.py  response.py
services/api-gateway/app/routes/: __init__.py  notifications.py
services/email-service/: .env.example  Dockerfile  README.md  requirements.txt
services/email-service/app/: __init__.py  config.py  database.py  main.py  worker.py
services/email-service/app/models/: db_models.py  schemas.py
services/email-service/app/services/: email_sender.py  template_client.py
services/push-service/: .env.example  Dockerfile  README.md  requirements.txt
services/push-service/app/: __init__.py  config.py  worker.py
services/push-service/app/models/: db_models.py  schemas.py
services/push-service/app/services/: push_sender.py  user_client.py
services/push-service/app/utils/: retry.py
services/push_service/: requirements.txt
services/push_service/app/: consumer.py  main.py  models.py
services/template-service/: .env.example  README.md  requirements.txt
services/template-service/app/: __init__.py  config.py  main.py
services/user-service/: .env.example  README.md  requirements.txt
services/user-service/app/: __init__.py  config.py  main.py
(+12 files in other folders)
